--- a/config/database.yml
+++ b/config/database.yml
@@ -21,5 +21,6 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  adapter: postgresql
+  timeout: 5000
+  database: jira_clone_backend_production
